--- a/MachineLearning/practice/1_feature_selection.ipynb
+++ b/MachineLearning/practice/1_feature_selection.ipynb
@@ -580,11 +580,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "y_mapping = {'L': 0, 'H': 1}\n",
-    "data_y, y_ohe = one_hot_encoder_column(data, 'y', y_mapping, fill_na=0)\n"
+    "data_y, y_ohe = one_hot_encoder_column(data_remove_bw, 'y', y_mapping, fill_na=0)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -595,11 +595,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "train_data_all = pd.concat([data_hl_score,data_fl, data_doc_type, data_word2vec, data_message, data_y], axis=1)\n",
-    "train_data_all.to_csv(\"./data/train_all_1.csv\")"
+    "train_data_all.to_csv(\"./data/train_all_1.csv\")\n"
    ],
    "metadata": {
     "collapsed": false,
