MachineLearning: aic_bic;  feature_selection: simple up_sample and down_sample code

--- a/MachineLearning/practice/1_feature_selection.ipynb
+++ b/MachineLearning/practice/1_feature_selection.ipynb
@@ -584,7 +584,7 @@
    "outputs": [],
    "source": [
     "y_mapping = {'L': 0, 'H': 1}\n",
-    "data_y, y_ohe = one_hot_encoder_column(data_remove_bw, 'y', y_mapping, fill_na=0)\n"
+    "data_y = data['y'].map(y_mapping)\n"
    ],
    "metadata": {
     "collapsed": false,
