--- a/MachineLearning/practice/1_model_train.ipynb
+++ b/MachineLearning/practice/1_model_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "data = pd.read_csv(\"./data/train_all_1.csv\")\n",
     "data = data.fillna(0)\n",
     "del data[data.columns[0]]\n",
     "X = data.iloc[:, :-51]\n",
-    "y = data.iloc[:, -1:]"
+    "y = data['y_0']"
    ],
    "metadata": {
     "collapsed": false,
@@ -33,7 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "from Python.sklearn.data_split import *\n",
+    "X_bal, y_bal = balance_sample(X, y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -49,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -61,7 +76,7 @@
       "ROC AUC: 0.57(+/- 0.02) [DT]\n",
       "ROC AUC: 0.59(+/- 0.03) [KNN]\n",
       "ROC AUC: 0.66(+/- 0.01) [SVC]\n",
-      "ROC AUC: 0.67(+/- 0.05) [RFC]\n"
+      "ROC AUC: 0.66(+/- 0.04) [RFC]\n"
      ]
     }
    ],
@@ -79,10 +94,10 @@
     "clf2 = DecisionTreeClassifier(max_depth=1, criterion='entropy', random_state=0)\n",
     "clf3 = KNeighborsClassifier(n_neighbors=1, p=2, metric='minkowski')\n",
     "clf4 = SVC(degree=2, probability=True)\n",
-    "#clf5 = RandomForestClassifier()\n",
+    "clf5 = RandomForestClassifier()\n",
     "\n",
-    "clf_labels = ['LR', 'DT', 'KNN']\n",
-    "clfs = [clf1, clf2, clf3]\n",
+    "clf_labels = ['LR', 'DT', 'KNN', 'SVC', 'RFC']\n",
+    "clfs = [clf1, clf2, clf3, clf4, clf5]\n",
     "print('10-fold cross validation:\\n')\n",
     "for clf, label in zip(clfs, clf_labels):\n",
     "    scores = cross_val_score(estimator=clf, X=X_train, y=y_train, cv=10, scoring='roc_auc')\n",
