--- a/MachineLearning/practice/2_model_train.ipynb
+++ b/MachineLearning/practice/2_model_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "data = pd.read_csv(\"./data/features2_all.csv\")\n",
@@ -31,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[1.0000e+00, 0.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       [2.0000e+00, 8.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       [3.0000e+00, 4.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       ...,\n       [4.0392e+04, 2.0000e+00, 0.0000e+00, ..., 3.0000e+00, 0.0000e+00,\n        1.0000e+00],\n       [3.7942e+04, 7.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       [2.7824e+04, 9.9000e+01, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00]])"
+      "text/plain": "array([[1.0000e+00, 0.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       [2.0000e+00, 8.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       [3.0000e+00, 4.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       ...,\n       [3.3360e+04, 6.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       [2.0996e+04, 8.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       [1.6166e+04, 4.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00]])"
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
    "source": [
     "from Python.sklearn.data_split import *\n",
     "\n",
-    "X_bal, y_bal = balance_up_sample(X, y)\n",
+    "X_bal, y_bal = balance_sample(X, y)\n",
     "X_bal"
    ],
    "metadata": {
@@ -166,6 +166,18 @@
     "plt.ylabel(\"true label\")\n",
     "plt.show()"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
