practice code update

--- a/MachineLearning/practice/1_feature_selection.ipynb
+++ b/MachineLearning/practice/1_feature_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "              主页ID        主页名称    分类  \\\n0  155000000000000  纬来体育台官方粉丝团  电视频道   \n1     359000000000       公视粉丝团  电视频道   \n2     359000000000       公视粉丝团  电视频道   \n3     190000000000    Mobile01  网路社群   \n4     359000000000       公视粉丝团  电视频道   \n\n                                             message                    name  \\\n0                      中华队长林智胜 三分砲！！！\\n人如其名　真的「致胜」阿～                     NaN   \n1    您所选择的电视频道，将会决定您的未来~\\n遥控器的决定权，就在你手上！\\n\\n#看见更好的未来  2015公视电视募款 公视让你看见更好的未来   \n2  好演员值得更多肯定和掌声！\\n\\n吴慷仁提到大概有六、七年资历的演员，所面临的最大困境，是赚...                   公视粉丝团   \n3                              大师兄 一发炸裂！！帅啊啊啊啊啊啊啊！！！       来自 Mobile01 贴文的相片   \n4  「再不救，就来不及了！如果没有很强力的救，再三十年，你可能找不到鹿港的味道了！」\\n\\n「两...              【我们的岛】抢救鹿港   \n\n                                         description   发文类型  y  \n0                                                NaN  video  H  \n1  这是一个资讯爆炸的时代，你所选择的资讯将决定你的视野；你所选择的电视频道，将会决定你的未来 ...  video  L  \n2                                                NaN   link  L  \n3                                                NaN  photo  H  \n4  叶明兰、叶镇中 / 采访报导 「再不救，就来不及了！如果没有很强力的救，再三十年，你可能找不...   link  L  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>主页ID</th>\n      <th>主页名称</th>\n      <th>分类</th>\n      <th>message</th>\n      <th>name</th>\n      <th>description</th>\n      <th>发文类型</th>\n      <th>y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>155000000000000</td>\n      <td>纬来体育台官方粉丝团</td>\n      <td>电视频道</td>\n      <td>中华队长林智胜 三分砲！！！\\n人如其名　真的「致胜」阿～</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>video</td>\n      <td>H</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>359000000000</td>\n      <td>公视粉丝团</td>\n      <td>电视频道</td>\n      <td>您所选择的电视频道，将会决定您的未来~\\n遥控器的决定权，就在你手上！\\n\\n#看见更好的未来</td>\n      <td>2015公视电视募款 公视让你看见更好的未来</td>\n      <td>这是一个资讯爆炸的时代，你所选择的资讯将决定你的视野；你所选择的电视频道，将会决定你的未来 ...</td>\n      <td>video</td>\n      <td>L</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>359000000000</td>\n      <td>公视粉丝团</td>\n      <td>电视频道</td>\n      <td>好演员值得更多肯定和掌声！\\n\\n吴慷仁提到大概有六、七年资历的演员，所面临的最大困境，是赚...</td>\n      <td>公视粉丝团</td>\n      <td>NaN</td>\n      <td>link</td>\n      <td>L</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>190000000000</td>\n      <td>Mobile01</td>\n      <td>网路社群</td>\n      <td>大师兄 一发炸裂！！帅啊啊啊啊啊啊啊！！！</td>\n      <td>来自 Mobile01 贴文的相片</td>\n      <td>NaN</td>\n      <td>photo</td>\n      <td>H</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>359000000000</td>\n      <td>公视粉丝团</td>\n      <td>电视频道</td>\n      <td>「再不救，就来不及了！如果没有很强力的救，再三十年，你可能找不到鹿港的味道了！」\\n\\n「两...</td>\n      <td>【我们的岛】抢救鹿港</td>\n      <td>叶明兰、叶镇中 / 采访报导 「再不救，就来不及了！如果没有很强力的救，再三十年，你可能找不...</td>\n      <td>link</td>\n      <td>L</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -65,22 +65,21 @@
       "---------------------------------------------\n",
       "主页名称 do not have any null values.\n",
       "主页名称  has [ 133 ] different values, please create features yourself!\n",
-      "please notice here are some seldom_indexes:  Index(['疯神无双', 'PTT网路电台/PTTradio', '我的自由年代', '金马影展 TGHFF', '联合报plus', '十二夜',\n",
-      "       '沃草！（Watchout）', 'NOWnews.com 今日新闻网', '【玩命关头】电影粉丝专属页面', '苹果娱乐新闻',\n",
-      "       'Running Man 台湾之家', '长不大的爸爸',\n",
-      "       '老外看中国、老外看台湾 A Laowai's View of China & Taiwan', 'PanSci 科学新闻网',\n",
-      "       'udn.com 联合新闻网', '大纪元时报 - 台湾(The Epoch Times - Taiwan)',\n",
-      "       '得利影视．go movie 情报站', '新头壳newtalk', 'KKBOX', 'ifilm/传影互动', '听见幸福',\n",
-      "       '食尚玩家', 'PNN公视新闻议题中心', '综艺大集合', '妹妹', 'MamaClub',\n",
-      "       'PTT Gossiping 批踢踢八卦板', '威视电影', '公视HD 高画质频道', '楼下的房客',\n",
-      "       '想想论坛 Thinking Taiwan Forum', '键盘大柠檬', 'La Vie 设计美学站',\n",
-      "       'Running Man ??? 台湾总站', '全民大新闻', '经济日报', 'Hami+?音乐', '综艺大热门', '乡民实业坊',\n",
-      "       '等一个人咖啡', 'Warner Bros Pictures TW', '华映娱乐', 'Bios Monthly',\n",
-      "       'Tripass 景点家', '旅游生活频道', '我可能不会爱你', '爽报', 'VOGUE Angels 时尚妈咪',\n",
-      "       '加藤军台湾粉丝团 2.0', '动物星球频道(台湾)', '独立特派员', '新唐人亚太电视台', 'BuzzOrange',\n",
-      "       'Technews 科技新报', '正晶限时批-限时批政经', '看见台湾', 'FOX', 'Maison Motion',\n",
-      "       'iBeauty 爱漂亮', '篮球部落 DA VILLAGE', 'Daai TV', '采昌国际多媒体', '小日子 X 好生活',\n",
-      "       '食尚玩家368城乡故事'],\n",
+      "please notice here are some seldom_indexes:  Index(['我的自由年代', '疯神无双', 'PTT网路电台/PTTradio',\n",
+      "       '老外看中国、老外看台湾 A Laowai's View of China & Taiwan', '【玩命关头】电影粉丝专属页面',\n",
+      "       '联合报plus', '金马影展 TGHFF', '苹果娱乐新闻', '沃草！（Watchout）', '长不大的爸爸',\n",
+      "       'NOWnews.com 今日新闻网', 'Running Man 台湾之家', '十二夜', '得利影视．go movie 情报站',\n",
+      "       'ifilm/传影互动', '大纪元时报 - 台湾(The Epoch Times - Taiwan)', '新头壳newtalk',\n",
+      "       '食尚玩家', 'PanSci 科学新闻网', 'udn.com 联合新闻网', 'KKBOX', '听见幸福',\n",
+      "       '想想论坛 Thinking Taiwan Forum', 'PNN公视新闻议题中心', '妹妹', '楼下的房客',\n",
+      "       'PTT Gossiping 批踢踢八卦板', '威视电影', 'MamaClub', '公视HD 高画质频道', '综艺大集合',\n",
+      "       '键盘大柠檬', 'La Vie 设计美学站', 'BuzzOrange', '经济日报', '小日子 X 好生活', '等一个人咖啡',\n",
+      "       'Hami+?音乐', '正晶限时批-限时批政经', 'VOGUE Angels 时尚妈咪', 'Tripass 景点家',\n",
+      "       '加藤军台湾粉丝团 2.0', 'Warner Bros Pictures TW', '独立特派员', '采昌国际多媒体',\n",
+      "       'Daai TV', '食尚玩家368城乡故事', '我可能不会爱你', 'iBeauty 爱漂亮',\n",
+      "       'Running Man ??? 台湾总站', 'Maison Motion', '全民大新闻', '篮球部落 DA VILLAGE',\n",
+      "       'Technews 科技新报', '新唐人亚太电视台', 'FOX', '旅游生活频道', '爽报', '综艺大热门', '华映娱乐',\n",
+      "       '看见台湾', '乡民实业坊', '动物星球频道(台湾)', 'Bios Monthly'],\n",
       "      dtype='object')\n",
       "\n",
       "\n",
@@ -140,8 +139,8 @@
       "Name: y, dtype: int64\n",
       "use following code to generate features from label mapping:\n",
       "y_mapping = {'L': 0, 'H': 1}\n",
-      "#TODO: add your logic to handle None\n",
-      "data_y, y_ohe = one_hot_encoder_column(data, 'y', y_mapping, fill_na=99)\n",
+      "binary value can use simple binary classification only:\n",
+      "data_y = data['y'].map(y_mapping)\n",
       "\n",
       "\n",
       "\n",
