--- a/MachineLearning/practice/2_feature_selection.ipynb
+++ b/MachineLearning/practice/2_feature_selection.ipynb
@@ -714,7 +714,8 @@
     "data_all = pd.concat([data_age, data_job, data_marital, data_education, data_housing, data_contact, data_day_of_week,\n",
     "                      data_duration, data_campaign, data_pdays, data_previous, data_poutcome, data_y], axis=1)\n",
     "\n",
-    "data_all.to_csv(\"./data/features2_all.csv\")"
+    "data_all.to_csv(\"./data/features2_all.csv\")\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
