--- a/MachineLearning/practice/2_model_train.ipynb
+++ b/MachineLearning/practice/2_model_train.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -31,22 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[1.0000e+00, 0.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       [2.0000e+00, 8.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       [3.0000e+00, 4.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       ...,\n       [3.3360e+04, 6.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       [2.0996e+04, 8.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00],\n       [1.6166e+04, 4.0000e+00, 0.0000e+00, ..., 0.0000e+00, 0.0000e+00,\n        0.0000e+00]])"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 5,
+   "outputs": [],
    "source": [
-    "from Python.sklearn.data_split import *\n",
-    "\n",
-    "X_bal, y_bal = balance_sample(X, y)\n",
-    "X_bal"
+    "# split train test first\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.20)"
    ],
    "metadata": {
     "collapsed": false,
@@ -57,11 +47,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(58384, 27)"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_valid, y_train, y_valid = train_test_split(X_bal, y_bal, test_size=0.20)\n"
+    "# balance train dataset\n",
+    "from Python.sklearn.data_split import *\n",
+    "X_bal, y_bal = balance_sample(X_train, y_train)\n",
+    "X_bal.shape"
    ],
    "metadata": {
     "collapsed": false,
@@ -177,18 +178,6 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
@@ -208,8 +197,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   }
