--- a/Python/matplotlib/plot_confusion_matrix.ipynb
+++ b/Python/matplotlib/plot_confusion_matrix.ipynb
@@ -11,22 +11,19 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.metrics import confusion_matrix\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "y_valid = []\n",
-    "y_valid_pred = []\n",
-    "\n",
-    "confmt = confusion_matrix(y_true=y_valid, y_pred=y_valid_pred)\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
-    "ax.matshow(confmt, cmap=plt.cm.Blues, alpha=0.3)\n",
-    "for i in range(confmt.shape[0]):\n",
-    "    for j in range(confmt.shape[1]):\n",
-    "        ax.text(x=j, y=i, s=confmt[i, j], va='center', ha='center')\n",
-    "plt.xlabel(\"predicted label\")\n",
-    "plt.ylabel(\"true label\")\n",
-    "plt.show()"
+    "def plot_confusion_matrix(y_true, y_pred):\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    from sklearn.metrics import confusion_matrix\n",
+    "    con_matrix = confusion_matrix(y_true=y_true, y_pred=y_pred)\n",
+    "    print(con_matrix)\n",
+    "    fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
+    "    ax.matshow(con_matrix, cmap=plt.cm.Blues, alpha=0.3)\n",
+    "    for i in range(con_matrix.shape[0]):\n",
+    "        for j in range(con_matrix.shape[1]):\n",
+    "            ax.text(x=j, y=i, s=con_matrix[i, j], va='center', ha='center')\n",
+    "    plt.xlabel('Predict Label')\n",
+    "    plt.ylabel('true label')\n",
+    "    plt.show()"
    ]
   }
  ],
