--- a/MachineLearning/practice/3_model_train.ipynb
+++ b/MachineLearning/practice/3_model_train.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "data = pd.read_csv(\"./data/features3_train.csv\")\n",
@@ -217,6 +217,65 @@
     "gs.best_params_\n",
     "y_valid_pred = gs.predict(X_valid)\n",
     "print(f1_score(y_valid, y_valid_pred))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from xgboost.sklearn import XGBClassifier\n",
+    "model = XGBClassifier( learning_rate =0.1,n_estimators=1000,max_depth=5,\n",
+    " min_child_weight=20,\n",
+    " gamma=0,\n",
+    " subsample=0.6,\n",
+    " colsample_bytree=0.8,\n",
+    " #objective= 'binary:logistic',\n",
+    " nthread=4,\n",
+    " scale_pos_weight=1,\n",
+    " seed=27)\n",
+    "model.fit(X_train, y_train,eval_metric='auc')\n",
+    "train_pred = model.predict(X_train)\n",
+    "test_pred = model.predict(X_valid)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.22794117647058823\n",
+      "0.06722689075630252\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f1_score(train_pred,y_train))\n",
+    "print(f1_score(y_valid, test_pred))"
    ],
    "metadata": {
     "collapsed": false,
